--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/springbootdb
-spring.datasource.username=postgres
+spring.datasource.url= jdbc:h2:mem:testdb
+
+#jdbc:postgresql://localhost:5432/springbootdb
+spring.datasource.username=sa
+#postgres
 spring.datasource.password=postgres@123
 
 spring.jpa.hibernate.ddl-auto=create-drop
