--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.username=sa
 spring.datasource.password=postgres@123
 
 spring.jpa.hibernate.ddl-auto=create-drop
+
+# Allow Thymeleaf templates to be reloaded at dev time
+spring.thymeleaf.cache: false
