Fixed refresh issue in the POM and resources folders.  Small HTML changes.

--- a/src/main/webapp/application.properties
+++ b/src/main/webapp/application.properties
@@ -9,3 +9,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 # Allow Thymeleaf templates to be reloaded at dev time
 spring.thymeleaf.cache: false
+spring.resources.cache-period: 0
