solved h2 console issue, began transition to postgresql.

--- a/src/main/webapp/application.properties
+++ b/src/main/webapp/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url= jdbc:h2:mem:testdb
+spring.datasource.url= jdbc:postgresql://localhost:5432/springbootdb
 
+#jdbc:h2:mem:testdb
 #jdbc:postgresql://localhost:5432/springbootdb
-spring.datasource.username=sa
+spring.datasource.username=postgres
+#sa (for h2)
 #postgres
 spring.datasource.password=postgres@123
 
