--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -56,11 +56,16 @@
             <artifactId>jquery</artifactId>
             <version>2.1.4</version>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.4.187</version>
             <type>jar</type>
+        </dependency>-->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4-1206-jdbc42</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
