--- a/bin/src/main/webapp/application.properties
+++ b/bin/src/main/webapp/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url= jdbc:h2:mem:testdb
+spring.datasource.url= jdbc:postgresql://localhost:5432/springbootdb
 
 #jdbc:h2:mem:testdb
 #jdbc:postgresql://localhost:5432/springbootdb
-spring.datasource.username=sa
+spring.datasource.username=postgres
 #sa (for h2)
-#postgres (postgres@123) or (josie)
-spring.datasource.password=
+#postgres
+spring.datasource.password=postgres@123
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
